# servant-insomnia

./: .gitignore  ChangeLog.md  LICENSE  README.md  servant-insomnia.cabal
.github/workflows/: ci.yaml  test.yaml
app/: Main.hs
src/: Insomnia.hs
src/Insomnia/: TH.hs  Typelevel.hs  Types.hs
test/: API.hs  Encoding.hs  Spec.hs  TH.hs
