cabal-version: 2.2

name:           servant-insomnia
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/AbsoluteNikola/servant-insomnia#readme>
homepage:       https://github.com/AbsoluteNikola/servant-insomnia#readme
bug-reports:    https://github.com/AbsoluteNikola/servant-insomnia/issues
author:         Nikolay Rulev
maintainer:     example@example.com
copyright:      2021 Nikolay Rulev
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/servant-insomnia

common shared-properties
  default-language: Haskell2010
  default-extensions:
      TypeOperators
    , DataKinds
    , RecordWildCards
    , DuplicateRecordFields
    , DeriveGeneric
    , OverloadedStrings
    , TemplateHaskell
    , QuasiQuotes
    , KindSignatures
    , ScopedTypeVariables
    , MultiParamTypeClasses
    , FlexibleInstances
    , TypeApplications
    , AllowAmbiguousTypes

  build-depends:
      base >=4.7 && <5
    , aeson
    , servant
    , servant-server
    , text
    , http-types
    , template-haskell

library
  import: shared-properties
  exposed-modules:
      Insomnia
      Insomnia.Types
      Insomnia.Typelevel
      Insomnia.TH
  other-modules:
  hs-source-dirs:
      src

test-suite servant-insomnia-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Encoding
    , API
    , TH
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
      test
  build-depends:
      servant-insomnia
    , tasty
    , tasty-hunit
